@@ -116,12 +116,11 @@ def test_ast_good_try():
     can_compile("(try)")
     can_compile("(try 1)")
     can_compile("(try 1 (except) (else 1))")
-    can_compile("(try 1 (else 1) (except))")
-    can_compile("(try 1 (finally 1) (except))")
     can_compile("(try 1 (finally 1))")
     can_compile("(try 1 (except) (finally 1))")
-    can_compile("(try 1 (except) (finally 1) (else 1))")
+    can_compile("(try 1 (except [x]) (except [y]) (finally 1))")
     can_compile("(try 1 (except) (else 1) (finally 1))")
+    can_compile("(try 1 (except [x]) (except [y]) (else 1) (finally 1))")
 
 
 def test_ast_bad_try():
@@ -130,6 +129,9 @@ def test_ast_bad_try():
     cant_compile("(try 1 bla bla)")
     cant_compile("(try (do) (else 1) (else 2))")
     cant_compile("(try 1 (else 1))")
+    cant_compile("(try 1 (else 1) (except))")
+    cant_compile("(try 1 (finally 1) (except))")
+    cant_compile("(try 1 (except) (finally 1) (else 1))")
 
 
 def test_ast_good_except():
