@@ -8,6 +8,10 @@ Changes from 0.12.1
    * `defreader` has been renamed to `defsharp`; what were previously called
      "reader macros", which were never true reader macros, are now called
      "sharp macros"
+   * `try` now enforces the usual Python order for its elements (`else` must
+     follow all `except`s, and `finally` must come last). This is only a
+     syntactic change; the elements were already run in Python order even when
+     defined out of order.
    * Importing or executing a Hy file automatically byte-compiles it, or loads
      a byte-compiled version if it exists and is up to date. This brings big
      speed boosts, even for one-liners, because Hy no longer needs to recompile
